--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,8 +1,6 @@
-<html>
-    <head>
+{% extends 'base.html'%}
+{% block content %}
 
-    </head>
-    <body>
         {% for task in tasks %}
             {{task.task_name}}
             {{task.category_name}}
@@ -10,5 +8,20 @@
             {{task.is_urgent}}
             {{task.due_date}}
         {% endfor %}
-    </body>
-</html>
+
+<ul class="collapsible" data-collapsible="accordion">
+    <li>
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+  </ul>
+    
+{% endblock %}
