--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,9 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
     </head>
     <body>
-        <h1>Outside!</h1>
-        {% block content %}
-
-        {% endblock %}
-
+        <div class="container">
+            {% block content %} {% endblock %}
+        </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>  
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
         <script type="text/javascript">
