--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -6,9 +6,13 @@
             <div class="input-field col s12">
             <i class="material-icons prefix">poll</i>
                 <select id="category" name="category_name">
-                <option value="" disabled selected>Choose category</option>
-                {% for cat in categories %}
-                <option value="{{cat.catergory_name}}">{{cat.catergory_name}}</option>
+                    <option value="" disabled selected>Choose category</option>
+                    {% for cat in categories %}
+                        {% if cat.category_name == task.category_name %}
+                    <option value="{{cat.catergory_name}}" selected >{{cat.catergory_name}}</option>
+                    {% else %}
+                    <option value="{{cat.catergory_name}}">{{cat.catergory_name}}</option>
+                    {% endif %}
                 {% endfor %}
                 </select>
                 <label>Task Category</label>
@@ -17,14 +21,14 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
-                <input id="task_name" name="task_name" type="text">
+                <input id="task_name" name="task_name" type="text" class="validate" value="{{task.task_name}}">
                 <label for="icon_prefix">Task Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">subject</i>
-                <textarea name="task_description" id="task_description" class="materialize-textarea"></textarea>
+                <textarea name="task_description" id="task_description" class="materialize-textarea">{{task.task_description}}</textarea>
                 <label for="icon_telephone">Task Description</label>
             </div>
         </div>
@@ -38,7 +42,11 @@
         <div class="row">
             <div class="switch">
                 <label>
-                  <input id="is_urgent" name="is_urgent" type="checkbox">
+                    {% if task.is_urgent %}
+                        <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+                    {% else %}
+                        <input id="is_urgent" name="is_urgent" type="checkbox">  
+                    {% endif %}
                   <span class="lever"></span>
                   Is Urgent
                 </label>
