--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <h3>Edit Task</h3>
 <div class="row">
-    <form action="{{url_for('insert_task') }}" method="POST" class="col s12">
+    <form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s12">
             <i class="material-icons prefix">poll</i>
@@ -53,11 +53,22 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+            <button class="btn waves-effect waves-light" type="submit" name="action">Edit Task
             <i class="material-icons right">playlist_add</i>
             </button>
         </div>
     </form>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+<script type="text/javascript">
+        $(document).ready(function(){
+
+        due_date = Date.parse('{{task.due_date}}')
+        $('#due_date').pickadate('picker').set('select', due_date, {format: 'dd/mm/yyy'}).trigger('change')
+        });
+</script>
+
+
 
 {% endblock %}
